--- a/wp-content/themes/dobele/resources/assets/sass/pages/kontakti.scss
+++ b/wp-content/themes/dobele/resources/assets/sass/pages/kontakti.scss
@@ -31,6 +31,7 @@
             .single-item{
                 padding-bottom: 10px;
                 padding-top: 10px;
+                float: left;
             }
             .image{
                 height: 115px;
